<resources>
    <string name="app_name">FindMyCar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login_title">Login</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Create Account</string>

    <string name="profile_title">Profile</string>
    <string name="full_name_hint">Full Name</string>
    <string name="save_profile_button">Save Profile</string>
    <string name="back_to_welcome_button">Sign Out</string>

    <string name="ai_hint">Ask the assistant...</string>
    <string name="send_message_content_description">Send Message</string>

    <string name="car_details_title">Car Details</string>
    <string name="car_description_label">Description</string>
    <string name="car_image_content_description">Image of the car</string>
    <string name="car_card_content_description">Image of %1$s, priced at %2$s, located in %3$s</string>
    <string name="price_format">$%,.2f</string>
    <string name="car_name_format">%1$d %2$s %3$s</string>
    <string name="view_details">View Details</string>
    <string name="compare_button">Compare</string>
    <string name="compare_cars_button">Compare Cars</string>
    <string name="compare_clear_button">Clear Comparison</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Qroot@FindMyCar:~/AndroidStudioProjects/FindMyCar# 
    </string>
</resources>
